--- a/css/app.css
+++ b/css/app.css
@@ -158,7 +158,7 @@ body p {
 	background-color: #27c;
 }
 #book-err{
-	display: none;
+	display: block;
 	position: fixed;
 	top:200px;
 	left: 300px;
